@@ -44,7 +44,7 @@ class TestAmount(unittest.TestCase):
         amount1 = Amount(D('100'), 'USD')
         amount2 = Amount.from_string('100 USD')
         self.assertEqual(amount1, amount2)
-        
+
         amount3 = Amount(D('0.00000001'), 'BTC')
         amount4 = Amount.from_string('0.00000001 BTC')
         self.assertEqual(amount3, amount4)
@@ -63,13 +63,13 @@ class TestAmount(unittest.TestCase):
     def test_tostring(self):
         amount1 = Amount(D('100034.023'), 'USD')
         self.assertEqual('100034.023 USD', str(amount1))
-        
+
         amount2 = Amount(D('0.00000001'), 'BTC')
         self.assertEqual('0.00000001 BTC', str(amount2))
 
         dcontext = display_context.DisplayContext()
         dformat = dcontext.build(commas=True)
-        self.assertEqual('100,034.023 USD', amount.to_string(dformat))
+        self.assertEqual('100,034.023 USD', amount1.to_string(dformat))
 
     def test_comparisons(self):
         amount1 = Amount(D('100'), 'USD')
